--- a/resources/css/examples.css
+++ b/resources/css/examples.css
@@ -68,10 +68,11 @@ footer {
 }
 
 .linkBox {
-    padding: 20px;
+    padding: 15px;
     background-color: #6bd0ea;
     color: white;
     float: right;
+    box-shadow:0px 0px 5px rgba(0, 0, 0, 0.3);
 }
 
 #yellowBox {
@@ -81,6 +82,10 @@ footer {
     height: 150px;
     width: 200px;
     box-shadow: 10px 10px 5px #aaaaaa;
+}
+
+.grid-container-nolinks .grid-content{
+    width: 100%;
 }
 
 #exampleList {
