--- a/resources/css/examples.css
+++ b/resources/css/examples.css
@@ -106,3 +106,9 @@ footer {
     height: 150px;
     width: 200px;
 }
+
+.grid-box {
+    width: auto; 
+    padding: 20px;
+    font-size: 20px;
+}
