--- a/resources/css/subject.css
+++ b/resources/css/subject.css
@@ -36,7 +36,7 @@ main {
   text-align: center;
   transition: background-color 0.3s ease;
   display: inline-block;
-  width: 19.5%;
+  width: 33%;
   color: white;
   margin-top: 10px;
 }
@@ -118,4 +118,84 @@ h2 {
 
 .links-right a:hover {
   color: #666;
+}
+
+@media only screen and (max-width: 600px) {
+  .grid-container {
+    display: block;
+  }
+  .task-grid {
+    display: block;
+  }
+}
+
+  
+@media only screen and (max-width: 600px) {
+  .grid-container {
+    display: block;
+  }
+  .task-grid {
+    display: block;
+  }
+  .grid-container-3, .boxes {
+      text-align: center;
+  }
+  .grid-box {
+      width: 45%;
+      font-size: 1rem;
+  }
+
+  .subjectHeader {
+      font-size: 30px;
+      padding-left: 20px;
+  }
+  .logo {
+      width: 50%;
+  }
+
+  .logo img {
+      max-width: 100%;
+  }
+
+  .icon {
+      padding: 20px;  
+      font-size: 40px; 
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .links .nav-item {display: none;}
+  .links .icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .blue-box a {
+      font-size: 18px;
+  }
+  .links.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .links.responsive .nav-item {
+    float: none;
+    display: block;
+    text-align: left;
+    padding: 10px;
+    position: relative;
+  }
+  .links.links.responsive {
+      width: 100%;
+  }
+  .navigation .links {
+      padding-top: 0px;
+  }
+  .fa-caret-down {display:none;}
+  .blue-box {
+      margin: 20px;
+      padding: 10px;
+  }
 }
