--- a/resources/css/subject.css
+++ b/resources/css/subject.css
@@ -38,7 +38,7 @@ main {
   display: inline-block;
   width: 33%;
   color: white;
-  margin-top: 10px;
+  margin: 0px 0px 10px 0px;
 }
 
 .grid-box:hover {
@@ -70,8 +70,7 @@ main {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 70% 30%;
-  grid-gap: 3rem;
+  grid-template-columns: auto auto;
 }
 
 .grid-container a {
@@ -91,13 +90,14 @@ main {
   border-radius: 10px;
   line-height: 2rem;
   font-size: 1.1rem;
-  background-color: #f2f2f2;
+  background-color: #d3d1ed;
   color: #333;
   font-size: 18px;
   font-family: sans-serif;
   padding: 0px 20px 20px 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   height: fit-content;
+  margin-bottom: 20px;
 }
 
 h2 {
@@ -106,10 +106,8 @@ h2 {
 
 .links-right {
   height: fit-content;
-  background-color: #d3d1ed;
-  margin-top: 10px;
-  padding-top: 5px;
   margin-bottom: 30px;
+  margin-left: 20px;
 }
 
 .links-right a {
@@ -119,83 +117,35 @@ h2 {
 .links-right a:hover {
   color: #666;
 }
-
-@media only screen and (max-width: 600px) {
-  .grid-container {
-    display: block;
-  }
-  .task-grid {
-    display: block;
-  }
-}
-
   
 @media only screen and (max-width: 600px) {
-  .grid-container {
-    display: block;
-  }
-  .task-grid {
-    display: block;
-  }
   .grid-container-3, .boxes {
       text-align: center;
   }
-  .grid-box {
-      width: 45%;
-      font-size: 1rem;
-  }
-
-  .subjectHeader {
-      font-size: 30px;
-      padding-left: 20px;
-  }
-  .logo {
-      width: 50%;
-  }
-
-  .logo img {
-      max-width: 100%;
-  }
-
-  .icon {
-      padding: 20px;  
-      font-size: 40px; 
-  }
 }
 
-@media screen and (max-width: 600px) {
-  .links .nav-item {display: none;}
-  .links .icon {
-    float: right;
-    display: block;
-  }
+.yearplan {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  background-color: #d3d1ed;
+  border-radius: 10px;
 }
 
-@media screen and (max-width: 600px) {
-  .blue-box a {
-      font-size: 18px;
-  }
-  .links.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .links.responsive .nav-item {
-    float: none;
-    display: block;
-    text-align: left;
-    padding: 10px;
-    position: relative;
-  }
-  .links.links.responsive {
-      width: 100%;
-  }
-  .navigation .links {
-      padding-top: 0px;
-  }
-  .fa-caret-down {display:none;}
-  .blue-box {
-      margin: 20px;
-      padding: 10px;
-  }
+.yearplan .period {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  padding: 0px 10px 10px 10px; 
+  background-color: #fefefe;
+  margin:10px;
+}
+
+.yearplan .period h3 {
+  text-transform: uppercase;
+  color: #706fd3;
+  margin-bottom:5px;
+}
+
+.yearplan .period ul {
+  padding-inline-start: 20px;
+  margin: 5px;
 }
